--- a/tests/index.html
+++ b/tests/index.html
@@ -21,6 +21,10 @@
 
     {{content-for 'body'}}
     {{content-for 'test-body'}}
+    <script src="assets/intl/intl.min.js"></script>
+    <script src="assets/intl/locales/en-us.js"></script>
+    <script src="assets/intl/locales/en-gb.js"></script>
+    <script src="assets/intl/locales/fr-fr.js"></script>
     <script src="assets/vendor.js"></script>
     <script src="assets/test-support.js"></script>
     <script src="assets/ember-intl-example.js"></script>
