--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>EmberIntlTest</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -16,7 +15,10 @@
   </head>
   <body>
     {{content-for 'body'}}
-
+    <script src="assets/intl/intl.min.js"></script>
+    <script src="assets/intl/locales/en-gb.js"></script>
+    <script src="assets/intl/locales/en-us.js"></script>
+    <script src="assets/intl/locales/fr-fr.js"></script>
     <script src="assets/vendor.js"></script>
     <script src="assets/ember-intl-example.js"></script>
 
